// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Button snapshots > matches snapshot — contrast variant 1`] = `
<button
  class="inline-flex items-center justify-center whitespace-nowrap rounded-md text-sm ring-offset-white focus-visible:outline-hidden focus-visible:ring-2 focus-visible:ring-slate-950 focus-visible:ring-offset-2 disabled:pointer-events-none disabled:opacity-50 dark:ring-offset-slate-950 dark:focus-visible:ring-slate-300 cursor-pointer bg-contrast text-textContrast border-2 border-grey-500 border-solid hover:opacity-80 transition-[0.3s] h-10 px-4 py-2"
>
  Contrast
</button>
`;

exports[`Button snapshots > matches snapshot — default 1`] = `
<button
  class="inline-flex items-center justify-center whitespace-nowrap rounded-md text-sm ring-offset-white focus-visible:outline-hidden focus-visible:ring-2 focus-visible:ring-slate-950 focus-visible:ring-offset-2 disabled:pointer-events-none disabled:opacity-50 dark:ring-offset-slate-950 dark:focus-visible:ring-slate-300 cursor-pointer bg-white text-black hover:bg-transparent border-2 border-solid border-white hover:text-text hover:opacity-70 transition-[.3s] h-10 px-4 py-2"
>
  Default
</button>
`;

exports[`Button snapshots > matches snapshot — destructive variant 1`] = `
<button
  class="inline-flex items-center justify-center whitespace-nowrap rounded-md text-sm ring-offset-white transition-colors focus-visible:outline-hidden focus-visible:ring-2 focus-visible:ring-slate-950 focus-visible:ring-offset-2 disabled:pointer-events-none disabled:opacity-50 dark:ring-offset-slate-950 dark:focus-visible:ring-slate-300 cursor-pointer bg-red-500 text-slate-50 hover:bg-red-500/90 dark:bg-red-900 dark:text-slate-50 dark:hover:bg-red-900/90 h-10 px-4 py-2"
>
  Delete
</button>
`;

exports[`Button snapshots > matches snapshot — disabled 1`] = `
<button
  aria-disabled="true"
  class="inline-flex items-center justify-center whitespace-nowrap rounded-md text-sm ring-offset-white focus-visible:outline-hidden focus-visible:ring-2 focus-visible:ring-slate-950 focus-visible:ring-offset-2 disabled:pointer-events-none disabled:opacity-50 dark:ring-offset-slate-950 dark:focus-visible:ring-slate-300 bg-white text-black hover:bg-transparent border-2 border-solid border-white hover:text-text hover:opacity-70 transition-[.3s] h-10 px-4 py-2 cursor-not-allowed opacity-50"
  disabled=""
>
  Disabled
</button>
`;

exports[`Button snapshots > matches snapshot — ghost variant 1`] = `
<button
  class="inline-flex items-center justify-center whitespace-nowrap rounded-md text-sm ring-offset-white transition-colors focus-visible:outline-hidden focus-visible:ring-2 focus-visible:ring-slate-950 focus-visible:ring-offset-2 disabled:pointer-events-none disabled:opacity-50 dark:ring-offset-slate-950 dark:focus-visible:ring-slate-300 cursor-pointer hover:bg-bg-secondary duration-300 h-10 px-4 py-2"
>
  Ghost
</button>
`;

exports[`Button snapshots > matches snapshot — icon size 1`] = `
<button
  aria-label="icon"
  class="inline-flex items-center justify-center whitespace-nowrap rounded-md text-sm ring-offset-white focus-visible:outline-hidden focus-visible:ring-2 focus-visible:ring-slate-950 focus-visible:ring-offset-2 disabled:pointer-events-none disabled:opacity-50 dark:ring-offset-slate-950 dark:focus-visible:ring-slate-300 cursor-pointer bg-white text-black hover:bg-transparent border-2 border-solid border-white hover:text-text hover:opacity-70 transition-[.3s] h-10 w-10"
>
  🔍
</button>
`;

exports[`Button snapshots > matches snapshot — large size 1`] = `
<button
  class="inline-flex items-center justify-center whitespace-nowrap text-sm ring-offset-white focus-visible:outline-hidden focus-visible:ring-2 focus-visible:ring-slate-950 focus-visible:ring-offset-2 disabled:pointer-events-none disabled:opacity-50 dark:ring-offset-slate-950 dark:focus-visible:ring-slate-300 cursor-pointer bg-white text-black hover:bg-transparent border-2 border-solid border-white hover:text-text hover:opacity-70 transition-[.3s] h-11 rounded-md px-8"
>
  Large
</button>
`;

exports[`Button snapshots > matches snapshot — link variant 1`] = `
<button
  class="inline-flex items-center justify-center whitespace-nowrap rounded-md text-sm ring-offset-white transition-colors focus-visible:outline-hidden focus-visible:ring-2 focus-visible:ring-slate-950 focus-visible:ring-offset-2 disabled:pointer-events-none disabled:opacity-50 dark:ring-offset-slate-950 dark:focus-visible:ring-slate-300 cursor-pointer text-slate-900 underline-offset-4 hover:underline dark:text-slate-50 h-10 px-4 py-2"
>
  Link
</button>
`;

exports[`Button snapshots > matches snapshot — loading 1`] = `
<button
  class="inline-flex items-center justify-center whitespace-nowrap rounded-md text-sm ring-offset-white focus-visible:outline-hidden focus-visible:ring-2 focus-visible:ring-slate-950 focus-visible:ring-offset-2 disabled:pointer-events-none disabled:opacity-50 dark:ring-offset-slate-950 dark:focus-visible:ring-slate-300 cursor-pointer bg-white text-black hover:bg-transparent border-2 border-solid border-white hover:text-text hover:opacity-70 transition-[.3s] h-10 px-4 py-2"
>
  Loading
  <svg
    aria-label="Loading"
    class="lucide lucide-loader-circle size-4 animate-spin"
    fill="none"
    height="24"
    role="status"
    stroke="currentColor"
    stroke-linecap="round"
    stroke-linejoin="round"
    stroke-width="2"
    viewBox="0 0 24 24"
    width="24"
    xmlns="http://www.w3.org/2000/svg"
  >
    <path
      d="M21 12a9 9 0 1 1-6.219-8.56"
    />
  </svg>
</button>
`;

exports[`Button snapshots > matches snapshot — outline variant 1`] = `
<button
  class="inline-flex items-center justify-center whitespace-nowrap rounded-md text-sm ring-offset-white transition-colors focus-visible:outline-hidden focus-visible:ring-2 focus-visible:ring-slate-950 focus-visible:ring-offset-2 disabled:pointer-events-none disabled:opacity-50 dark:ring-offset-slate-950 dark:focus-visible:ring-slate-300 cursor-pointer border border-slate-200 bg-white hover:bg-slate-100 hover:text-slate-900 dark:border-slate-800 dark:bg-slate-950 dark:hover:bg-slate-800 dark:hover:text-slate-50 h-10 px-4 py-2"
>
  Outline
</button>
`;

exports[`Button snapshots > matches snapshot — secondary variant 1`] = `
<button
  class="inline-flex items-center justify-center whitespace-nowrap rounded-md text-sm ring-offset-white transition-colors focus-visible:outline-hidden focus-visible:ring-2 focus-visible:ring-slate-950 focus-visible:ring-offset-2 disabled:pointer-events-none disabled:opacity-50 dark:ring-offset-slate-950 dark:focus-visible:ring-slate-300 cursor-pointer bg-slate-800 text-slate-900 hover:bg-slate-800/80 dark:bg-slate-100 dark:text-slate-50 dark:hover:bg-slate-100/80 h-10 px-4 py-2"
>
  Secondary
</button>
`;

exports[`Button snapshots > matches snapshot — sm size 1`] = `
<button
  class="inline-flex items-center justify-center whitespace-nowrap text-sm ring-offset-white focus-visible:outline-hidden focus-visible:ring-2 focus-visible:ring-slate-950 focus-visible:ring-offset-2 disabled:pointer-events-none disabled:opacity-50 dark:ring-offset-slate-950 dark:focus-visible:ring-slate-300 cursor-pointer bg-white text-black hover:bg-transparent border-2 border-solid border-white hover:text-text hover:opacity-70 transition-[.3s] h-9 rounded-md px-3"
>
  Small
</button>
`;
